--- a/package.json
+++ b/package.json
@@ -4,30 +4,17 @@
   "description": "Money Laundering Detection System - Frontend",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
     "vis-network": "^9.1.2",
     "chart.js": "^3.9.1",
-    "react-chartjs-2": "^4.3.1",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
-    "zustand": "^4.3.9",
-    "lucide-react": "^0.263.1",
-    "tailwindcss": "^3.3.2",
     "classnames": "^2.3.2"
   },
-  "devDependencies": {
-    "react-scripts": "5.0.1",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "typescript": "^5.1.3"
-  },
+  "devDependencies": {},
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "npx serve ./public -p 8080",
+    "serve": "npx serve ./public -p 8080",
+    "build": "echo \"Static site - no build step. Open ./public/index.html or run npm start\""
   },
   "eslintConfig": {
     "extends": [
