--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "vis-network": "^9.1.2",
     "chart.js": "^3.9.1",
+    "csv-parse": "^5.3.6",
+    "multer": "^1.4.5-lts.1",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "classnames": "^2.3.2"
